Simplified the code to not manage the Tedious connection. The connection is made externally and operations are synchronous as operations should not proceed without valid sessions.

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,10 +4,10 @@ extends: 'eslint:recommended'
 rules:
   indent:
     - 2
-    - 4
+    - 2
   linebreak-style:
     - 2
-    - windows
+    - unix
   no-console:
     - 1
   quotes:
