--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "version": "1.1.2",
   "author": "Mathieu Cartoixa",
   "main": "lib/connect-tedious",
-  "keywords": ["sql-server", "tds", "connection", "session", "store"],
+  "keywords": [
+    "sql-server",
+    "tds",
+    "connection",
+    "session",
+    "store"
+  ],
   "dependencies": {
-    "node-connection-string-builder": "^0.0.1",
     "retry": "^0.9.0",
     "tedious": "^1.13.2",
-    "tedious-connection-pool": "^0.3.9",
     "debug": "^2.2.0"
   },
   "devDependencies": {
@@ -22,8 +26,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mcartoixa/connect-tedious.git"
-  },  
+    "url": "git://github.com/AronRubin/connect-tedious.git"
+  },
   "scripts": {
     "lint": "eslint lib/"
   },
